<?xml version="1.0" encoding="utf-8" standalone="no"?>
<resources>
    <string name="app_name">智能插座</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="text_lishate_load">loading</string>
    <string name="switchs">switchs</string>
    <string name="ir">ir</string>
    <string name="mode">mode</string>
    <string name="more">more</string>
    <string name="apkdownload">正在现在新的apk</string>
    <string name="update_new">发现新版本, 为不影响使用正在更新</string>
    <string name="yes">确定</string>
    <string name="no">取消</string>
    <string name="updatefail">下载失败</string>
    <string name="devicelist_title">我的设备</string>
    <string name="netNoConnect">网络未连接</string>
    <string name="device_name">设备名称</string>
    <string name="config_title">配置</string>
    <string name="errorConnWifi">连接WIFI错误</string>
    <string name="setTime">设置时间</string>
    <string name="pwd">密码</string>
    <string name="show_pass">显示密码</string>
    <string name="start_config">开始配置</string>
    <string name="delayDo">延迟</string>
    <string name="unEnaable">不能用</string>
    <string name="notis">没有IS</string>
    <string name="enable">可用</string>
    <string name="m_5_min">5分钟</string>
    <string name="m_10_min">10分钟</string>
    <string name="m_30_min">30分钟</string>
    <string name="m_60_min">60分钟</string>
    <string name="m_90_min">90分钟</string>
    <string name="m_120_min">120分钟</string>
    <string name="min">分钟</string>
    <string name="device_new">添加设备</string>

    <string name="unNetwork">网络未连接</string>
    <string name="remove">SD无法读取, 请检查SD</string>
    <string name="rom">使用ROM存储</string>
    <string name="ssid_error">SSID错误, 请检查</string>
    <string name="close">关闭</string>
    <string name="configing">配置中</string>
    <string name="wangt_del_device">想要删除该设备</string>
    <string name="loging">正在连接...</string>
    <string name="timeout">网络延迟, 请检查网络或重试</string>
    <string name="timeTask">定时任务</string>
    <string name="deviceInfo">设备信息</string>
    <string name="open">打开</string>
    <string name="monday">星期一</string>
    <string name="tuesday">星期二</string>
    <string name="wednesday">星期三</string>
    <string name="thursday">星期四</string>
    <string name="friday">星期五</string>
    <string name="saturday">星期六</string>
    <string name="sunday">星期日</string>
    <string name="monday_mini">一</string>
    <string name="tuesday_mini">二</string>
    <string name="wednesday_mini">三</string>
    <string name="thursday_mini">四</string>
    <string name="friday_mini">五</string>
    <string name="saturday_mini">六</string>
    <string name="sunday_mini">日</string>
    <string name="nerver">从不</string>
    <string name="error_max_7_count_list">最多7个</string>
    <string name="deltask">确定删除定时?</string>
    <string name="repeat">重复</string>
    <string name="openTime">打开时间</string>
    <string name="CloseTime">关闭时间</string>
    <string name="name">名称</string>
    <string name="repeat_circle">重复周期</string>
    <string name="renwu_socket">插座</string>
    <string name="renwu_switch">开关</string>
    <string name="renwu_control">控制器</string>
    <string name="renwu_more">更多功能</string>
    <string name="renwu_socket_open">开启所有</string>
    <string name="renwu_socket_close">关闭所有</string>
    <string name="renwu_socketlist_online_on">在线</string>
    <string name="renwu_socketlist_online_off">离线</string>
    <string name="renwu_socketlist_online_un">获取中</string>
    <string name="renwu_socketlist_onff_on">开启</string>
    <string name="renwu_socketlist_onff_off">关闭</string>
    <string name="renwu_socketlist_settime_on">设置</string>
    <string name="renwu_socketlist_settime_off">未设置</string>
    <string name="renwu_socketlist_openall">打开所有设备</string>
    <string name="renwu_socketlist_closeall">关闭所有</string>
    <string name="renwu_morehelp_addnew">增加新设备</string>
    <string name="renwu_morehelp_appdownload">App下载</string>
    <string name="renwu_morehelp_inputdata">导入数据</string>
    <string name="renwu_morehelp_language">语言选择</string>
    <string name="renwu_morehelp_outdata">导出数据</string>
    <string name="renwu_morehelp_help">手机震动</string>
    <string name="renwu_morehelp_key">按键震动</string>
    <string name="renwu_morehelp_about">关于智能插座</string>
    <string name="renwu_socket_task">定时任务列表</string>
    <string name="renwu_socket_dealy_title">延迟时间</string>
    <string name="renwu_socket_task_open">启用</string>
    <string name="renwu_socket_task_opentime">开启时间</string>
    <string name="renwu_socket_task_closetime">关闭时间</string>
    <string name="renwu_socket_task_cyc">重复周期</string>
    <string name="renwu_socketlist_send_fail">发生错误, 请检查网络状况</string>
    <string name="renwu_exit">确定退出？</string>
    <string name="renwu_operation_fail">操作失败！</string>
    <string name="renwu_socket_detail_open">打开</string>
    <string name="renwu_socket_detail_close">关闭</string>
    <string name="renwu_socket_dtail_maxtime">不能添加更多定时</string>
    <string name="renwu_socket_offline">设备断线</string>
    <string name="renwu_config_fail">配置失败</string>
    <string name="renwu_config_sus">配置成功</string>
    <string name="renwu_config_find">发现设备</string>
    <string name="renwu_config_unfind">未发现设备</string>
    <string name="renwu_config_finding">寻找设备</string>
    <string name="renwu_config_ssid">WIFI</string>
    <string name="renwu_config_password">密码</string>
    <string name="renwu_config_showpass">显示密码</string>
    <string name="renwu_config_config">配置</string>
    <string name="renwu_config_back">配置中, 不能返回</string>
    <string name="renwu_config_delay_hour">小时</string>
    <string name="renwu_config_delay_min">分钟</string>
    <string name="renwu_config_delay_delay">延迟</string>
    <string name="renwu_config_delay_open">开</string>
    <string name="renwu_config_delay_close">关</string>
    <string name="renwu_config_socketlist">设备列表</string>
    <string name="renwu_config_switchlist">开关列表</string>
    <string name="renwu_config_controllist">控制列表</string>
    <string name="renwu_config_morelist">更多功能</string>
    <string name="renwu_config_newtask">新建任务</string>
    <string name="renwu_config_modifytask">修改任务</string>
    <string name="renwu_config_device">配置设备</string>
    <string name="renwu_config_languagechange">语言切换, 需下次打开应用才生效</string>
    <string name="renwu_more_recv_sus">接收成功</string>
    <string name="renwu_more_recv_fail">接收失败</string>
    <string name="renwu_more_outdata">数据正在导出</string>
    <string name="renwu_more_indata">数据正在导入</string>
    <string name="renwu_info_name">名称</string>
    <string name="renwu_info_pic">选择图片</string>
    <string name="renwu_detial_delay">延迟</string>
    <string name="renwu_detail_send_sus">成功</string>
    <string name="edit">编辑</string>
    <string name="devicename">设备名字</string>
    <string name="timerset">时间设置</string>
    <string name="timertask">定时任务</string>
   <string name="timersetting">定时设置</string>
   <string name="rename_action">修改名字</string>
   <string name="namesetting">修改设备名字</string>
   <string name="deviceoffline">当前设备处于离线状态</string>
   <string name="saving_data">正在保存修改的数据</string>
   <string name="edittimer">"编辑定时"</string>
   <string name="complete">"完成"</string> 
   <string name="hour">"时"</string>
   <string name="minute">"分"</string>
   <string name="timeropen">"开"</string>
   <string name="timerclose">"关"</string>
   
   <string name="head">这里是HeadView</string>
    <string name="pull_to_refresh">下拉刷新</string>
    <string name="release_to_refresh">释放立即刷新</string>
    <string name="refreshing">正在刷新</string>
    <string name="refresh_succeed">刷新成功</string>
    <string name="refresh_fail">刷新失败</string>
    <string name="pullup_to_load">上拉加载更多</string>
    <string name="release_to_load">释放立即加载</string>
    <string name="loading">正在加载...</string>
    <string name="load_succeed">加载成功</string>
    <string name="load_fail">加载失败</string>
    
    <string name="device_new_power">请确认设备进入配置状态</string>
    <string name="device_new_config">长按按键5S, 指示灯慢闪, 松开按键, 选择配置</string>
    <string name="device_new_onekey">一键配置</string>
    <string name="device_new_help">&#060;&#060;一键配置说明&#062;&#062;</string>
    <string name="device_new_fail">如果配置失败,请点击</string>
    <string name="device_new_ap">AP配置</string>
    
    <string name="device_new_aphelp">AP配置说明</string>
    <string name="help_ap_title">AP配置为一种辅助配置, 如果一键配置失败, 请尝试以下方法进行配置</string>
    <string name="help_ap_one">(1) 在一键配置的基础上继续长按插座按键5S, 指示灯进入更慢闪的状态松开按键</string>
    <string name="help_ap_two">(2) 设置手机WIFI连接上插座的SSID</string>
    <string name="help_ap_three">(3) 等待手机连接正常回到AP配置界面, 选择需要连接的路由器SSID, 点击开始配置</string>
    <string name="help_ap_four">(4) 等待配置成功, APP会自动跳转到主页面</string>
    
    <string name="help_title">使用说明书</string>
    <string name="help_ok_h1">1. 添加配置</string>
    <string name="help_ok_h1_one">(1) 手机连接WIFI路由器SSID</string>
    <string name="help_ok_h1_two">(2) 长按插座按键5S, 指示灯开始慢闪, 进入配置模式, 松开按键</string>
    <string name="help_ok_h1_three">(3) 打开APP, 点击下方添加设备, 选择一键配置进入一键配置界面</string>
    <string name="help_ok_h1_four">(4) 输入当前手机连接的路由器SSID密码, 选择开始配置</string>
    <string name="help_ok_h1_five">(5) 等待配置成功后会自动返回主页面</string>
    <string name="help_ok_h2">2. 插座使用</string>
    <string name="help_ok_h2_one">(1) 点击设备图标可以更换合适的图标, 也可以从相册选择图标</string>
    <string name="help_ok_h2_two">(2) 点击设备名称可以对设备重命名</string>
    <string name="help_ok_h2_three">(3) 点开关按钮可以对设备进行远程控制</string>
    <string name="help_ok_h2_four">(4) 点定时图标可以添加定时任务</string>
    <string name="help_ok_h3">3. 常见问题</string>
    <string name="help_ok_h3_one">(1) 添加设备不成功\n确认设备是在配置状态，注意WIFI网络信号是否正常（目前设备不支持连接含汉字的WIFI热点）,如重试不成功请将设备断电退出APP再重新配置</string>
    <string name="help_ok_h3_two">(2) 设置定时任务没有执行\n确认定时任务是否打开，有选择对应日期定时。为了降低功耗，设备会每隔一段时间和云服务器同步，定时任务会有几十秒钟延时</string>
    <string name="help_ok_h3_three">(3) 设备不能远程控制\n下拉刷新获取当前设备状态，请确认手机端网络是否正常，检查设备连接的WIFI能否正常访问Internet</string>
    
    <string name="timer_new">添加定时</string>
    <string name="timer_switch">定时 开/关</string>
    <string name="photo_select">选择设备头像</string>
</resources>
