<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginLeft="20.0dip"
    android:layout_marginRight="20.0dip"
    android:background="@drawable/info_setting_circle"
    android:gravity="center"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/exitdialog_title"
        android:layout_width="fill_parent"
        android:layout_height="48.0dip"
        android:textSize="30.0dip"
        android:visibility="gone" />

    <TextView
        android:id="@+id/exitdialog_text"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="24dp"
        android:gravity="center"
        android:text="@string/renwu_exit"
        android:textColor="@color/black"
        android:textSize="18sp" />

    <View
        android:layout_width="fill_parent"
        android:layout_height="1.0dip"
        android:background="#ffb5b2b5" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="bottom|center_horizontal"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/exitdialog_yes"
            android:layout_width="100dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/transprent"
            android:paddingBottom="10.0dip"
            android:paddingTop="10.0dip"
            android:text="@string/yes" />

        <TextView
            android:layout_width="1.0dip"
            android:layout_height="wrap_content"
            android:background="#ffb5b2b5"
            android:paddingBottom="0.0dip"
            android:paddingTop="0.0dip"
            android:text="" />

        <Button
            android:id="@+id/exitdialog_no"
            android:layout_width="100dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/transprent"
            android:paddingBottom="10.0dip"
            android:paddingTop="10.0dip"
            android:text="@string/no" />
    </LinearLayout>

</LinearLayout>