<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/plugbg" >
    <RelativeLayout
        	    android:layout_width="fill_parent"
        	    android:layout_height="50.0dip"
        	    android:background="@drawable/headbg"
        	    android:paddingTop="8.0dip" >

        	    <TextView
        	        android:id="@+id/socketnewtask_name"
        	        android:layout_width="wrap_content"
        	        android:layout_height="wrap_content"
        	        android:layout_centerHorizontal="true"
        	        android:layout_centerInParent="true"
        	        android:layout_centerVertical="true"
        	        android:text="@string/namesetting"
        	        android:textColor="@color/white"
        	        android:textSize="17.0dip" />

        	    <Button
        	        android:id="@+id/save_name"
        	        android:layout_width="wrap_content"
        	        android:layout_height="wrap_content"
        	        android:layout_alignParentRight="true"
        	        android:layout_centerVertical="true"
        	        android:layout_marginRight="18dp"
        	        android:textColor="@color/white"
        	        android:background="@color/transprent"
        	        android:text="@string/yes" />

        	</RelativeLayout>
    <RelativeLayout 
       android:layout_width="match_parent"
    	android:layout_height="match_parent" 
        >
	       <TextView 
	        android:id="@+id/rename"
		    android:layout_height="40dp"
		    android:layout_width="wrap_content"
		    android:layout_marginTop="30dp"
		    android:gravity="center"
		    android:textColor="#ff000000"
		    android:text="@string/rename_action"/>
	       <EditText 
		    android:id="@+id/renameinput"
		    android:layout_marginTop="30dp"
		    android:layout_toRightOf="@id/rename"
		    android:textColor="#ff000000"
		    android:layout_height="40dp"
		    android:layout_width="120dp"/> 
		    
        	<Button 
		    android:id="@+id/renameok"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:background="@color/transprent"
		    android:text="@string/yes"
		    android:visibility="gone"
		    android:textColor="#ff000000"
		    android:layout_centerInParent="true"/>

        	

    </RelativeLayout>
	
	
</LinearLayout>
