<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/grey"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="50.0dip"
        android:background="@drawable/headbg"
        android:visibility="gone"
        android:paddingTop="8.0dip" >

        <ImageButton
            android:id="@+id/socketlist_allopen"
            android:layout_width="30dip"
            android:layout_height="30dip"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="5dp"
            android:background="@drawable/refresh_btn_white" />

        <Button
            android:id="@+id/socketlist_allclose"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10.0dip"
            android:layout_toRightOf="@id/socketlist_allopen"
            android:text="@string/renwu_socket_close"
            android:textColor="#ff000000"
            android:textSize="15.0dip"
            android:visibility="gone" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/renwu_config_socketlist"
            android:textColor="#ffffffff"
            android:textSize="20sp" />

        <ProgressBar
            android:id="@+id/socketlist_refresjing"
            style="?android:attr/progressBarStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10.0dip"
            android:indeterminate="true"
            android:visibility="gone" />

        <ImageButton
            android:id="@+id/socketlist_refresh"
            android:layout_width="50dp"
            android:layout_height="60dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:background="@drawable/adddevice" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="128dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/plug_header" >
            
            <ImageView
                android:id="@+id/ivHelp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_margin="16dp"
                android:src="@drawable/icon_help" />
            
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="16dp"
                android:text="@string/devicelist_title"
                android:textColor="@color/white"
                android:textSize="18sp" />
                
        </RelativeLayout>
        
        <TextView
            android:id="@+id/socketlist_net_check"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="#fff2d087"
            android:gravity="center"
            android:padding="5.0dip"
            android:text="@string/netNoConnect"
            android:visibility="gone" />
		        
        <com.zxs.ptrmenulistview.PullToRefreshLayout 
		    android:id="@+id/refresh_view"
		    android:layout_width="match_parent"
		    android:layout_height="0dp"
		    android:layout_weight="1" >

		    <include layout="@layout/refresh_head" />

   			<com.zxs.ptrmenulistview.SwipeMenuListView
	         	android:id="@+id/socketlist_listview"
	         	android:layout_width="match_parent"
				android:layout_height="match_parent"
	        	android:background="@color/white"
	         	android:scrollbars="vertical" />

    		<include layout="@layout/load_more" />

		</com.zxs.ptrmenulistview.PullToRefreshLayout>

        <LinearLayout 
            android:id="@+id/llDeviceNew"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:gravity="center">
            
            <TextView 
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/device_new"
                android:textColor="@color/orange"
                android:drawableLeft="@drawable/device_new"
                android:drawablePadding="8dp"/>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>